[gd_scene load_steps=4 format=3 uid="uid://dyfgi38cvachl"]

[ext_resource type="Script" uid="uid://d2f5h41a4w273" path="res://src/ui/ingame/collection/collection_ui.gd" id="1_g6ccc"]
[ext_resource type="PackedScene" uid="uid://lgd2g38edtud" path="res://src/ui/component/border_panel_container.tscn" id="2_1jkt2"]
[ext_resource type="StyleBox" uid="uid://cpkdte5woiv0y" path="res://theme/dark_bg.tres" id="3_g6ccc"]

[node name="CollectionUi" type="CanvasLayer"]
script = ExtResource("1_g6ccc")
metadata/_custom_type_script = "uid://ccd8amg2hly0y"

[node name="BorderPanelContainer" parent="." instance=ExtResource("2_1jkt2")]

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "collection"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ArtifactContainer" type="ScrollContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ArtifactsFlowContainer" type="HFlowContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/ArtifactContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="SidePanel" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="SidePanelRoot" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_g6ccc")

[node name="MarginContainer" type="MarginContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NameLbl" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "lion_shield"
horizontal_alignment = 1

[node name="DescLbl" type="Label" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
text = "lorem blad dmmd pdppsd s√ºdopdps ldls dlld 
dlldl"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RarityBox" type="VBoxContainer" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SidePanel/SidePanelRoot/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="BackBtn" type="Button" parent="BorderPanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "back"

[editable path="BorderPanelContainer"]
